fix: fix layout issue when the screen size changes

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ main section.board {
 
   div {
     aspect-ratio: 1;
+    width: 10rem;
     border: 3px solid var(--sec-font);
     display: flex;
     justify-content: center;
